# aliyun-mns-rs

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: build.yml
src/: client.rs  consumer.rs  devtool.rs  error.rs  lib.rs  options.rs  queue.rs  queue_manager.rs
tests/: common.rs  conf.rs  consumer.rs  send_msg.rs
