[package]
name = "aliyun-mns"
version = "0.1.1"
edition = "2021"
description = "Aliyun MNS SDK for Rust"
license = "MIT"
repository = "https://github.com/hjin-me/aliyun-mns-rs"
authors = ["HJin"]
keywords = ["aliyun", "mns"]
exclude = ["tests/*"]

[lib]
name = "mns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base16ct = "0.1.1"
base64 = "0.21.0"
hmac = "0.12.1"
md-5 = "0.10.5"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha1 = "0.10.5"
time = { version = "0.3.17", features = ["formatting", "parsing", "serde", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }
